fix visible scrollbar in SR screenshot

--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,10 @@ footer{
 
 @media only screen and (min-width: 900px) {
 
+  body, main{
+    max-width: 1100px;
+  }
+
   section{
     margin-top: 10px;
   }
